Adjusting some minor alignment issues
Adjusting some minor alignment issues

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -134,8 +134,8 @@ p, ul {
 		padding-right: 1.2em;
 		padding-bottom: 0;	
 		@media screen and (min-width: $width-medium) { 
-			padding-left:1.5em;
-			padding-right: 1.5em;
+			padding-left:1.7em;
+			padding-right: 1.7em;
 			max-width:87.667em;		
 		}
 	}
@@ -224,12 +224,21 @@ a { text-decoration:none;
   	transition: all .2s ease-in-out; 
 }
 
-h2 + p, h3 + p, h2 + ul, h3 + ul {
+h2 + p, h2 + ul {
 	padding-left:.6em;
 	padding-right: .6em;	
 		@media screen and (min-width: $width-medium) { 
 			padding-left: .8em;
 			padding-right: .8em;		
+		}		
+}
+
+h3 + p, h3 + ul {
+	padding-left:.6em;
+	padding-right: .6em;	
+		@media screen and (min-width: $width-medium) { 
+			padding-left: .6em;
+			padding-right: .6em;		
 		}		
 }
 
@@ -263,7 +272,8 @@ h2 + p, h3 + p, h2 + ul, h3 + ul {
 .thumb-text-wrap {
 	padding:1.4em;	
 	h3 {
-		color:rgba(33,33,33,1.0);	
+		color:rgba(33,33,33,1.0);
+		line-height:1.33em;	
 	}
 	@media screen and (min-width: $width-medium) { 
 		padding:.75em 0 0 0;
@@ -500,7 +510,7 @@ footer {
 	color:rgba(255,255,255,1.0);
 	padding:0 .6em;	
 	@media screen and (min-width: $width-medium) { 
-		padding:0 .9em;	
+		padding:0 1.1em;	
 	}
 }
 
